Updates to fix handling of containers.